# datasets

./: .gitignore  INFO.md  README.md  pyproject.toml
geda/: __init__.py  get_data.py
geda/data_providers/: __init__.py  base.py  coco.py  duts.py  mnist.py  mpii.py  nyud.py  voc.py
geda/datasets/: __init__.py  base.py  coco.py  duts.py  mnist.py  mpii.py  nyud.py  voc.py
geda/parsers/: __init__.py  yolo.py
geda/tests/: test_download.py
geda/utils/: __init__.py  colors.py  config.py  files.py  images.py  pylogger.py
py_data_provider/: __init__.py
py_data_provider/data_providers/: __init__.py  base.py  duts.py  nyud.py  voc.py
py_data_provider/datasets/: __init__.py  base.py  duts.py  nyud.py  voc.py
py_data_provider/parsers/: __init__.py  yolo.py
py_data_provider/utils/: __init__.py  colors.py  files.py  images.py
